--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,9 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "yajra/laravel-datatables-oracle": "~9.0",
-        "symfony/translation": "4.3.8"
+        "phpmailer/phpmailer": "^6.1",
+        "symfony/translation": "4.3.8",
+        "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
