--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "phpmailer/phpmailer": "^6.1",
+        "realrashid/sweet-alert": "^3.1",
         "symfony/translation": "4.3.8",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
